Fixed question not showing for speedtraining, added mobile advisory

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -174,6 +174,15 @@ h2, h3, h4 {
     transition: .165s ease-in; 
 }
 
+.Index > body > #Create-account #attribution {
+    transition: .165s ease-in;
+}
+
+.Index > body > #Create-account #attribution:hover {
+    transform: scale(1.05);
+    transition: .2s ease-in;
+}
+
 @media only screen and (max-width: 1300px) {
     .Index {
         background: url("../Images/Backgrounds/pythonbluebg2.png");
@@ -539,6 +548,12 @@ h2, h3, h4 {
     left: 13px;
 }
 
+.Main-Menu > body > p {
+    margin-left: 15px;
+    font-size: larger;
+    display: none;
+}
+
 @media only screen and (max-width: 1300px) {
     .Main-Menu {
         background: url("../Images/Backgrounds/pythonnormal2.png");
@@ -573,6 +588,12 @@ h2, h3, h4 {
     }
     .Main-Menu > body > #Menu > #Tutorial {
         left: 0px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .Main-Menu > body > p {
+        display: block;
     }
 }
 
